# sippo

./: .gitignore  CMakeLists.txt  README.md
lection1/: pom.xml
task_no1/: Point2D.h  QuadraticInterpolation.cpp  QuadraticInterpolation.h  Test.cpp
task_no2/: Problem.txt  Result.txt  adapt_table.py  linear_prog.md  report.tex  task.gms  task.lst
task_no2/simplex/: simplex.py
task_no3/: RuzanovaDP_список1.tex  RuzanovaDP_список2.tex  latex1.tex  latex2.tex  Список1.docx  Список2.docx
